<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_general_title" >
        <Preference
            android:key="pref_official_weibo_key"
            android:title="@string/pref_official_weibo_title" />
        <Preference
            android:key="pref_version_key"
            android:summary="1.0 alpha"
            android:title="@string/pref_version_title" />
        <Preference
            android:key="pref_author_key"
            android:summary="@string/pref_author_summary"
            android:title="@string/pref_author_title" />
        <Preference
            android:summary="https://github.com/dingyu/--"
            android:title="@string/pref_github_title" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/dingyu/--" />
        </Preference>
        <Preference android:title="@string/pref_open_source_license_title" >
        </Preference>
        <!--
             <intent
                android:targetPackage="com.example.dingyu"
                android:targetClass="com.example.dingyu.ui.preference.LicenseActivity"/>
        -->

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_support_title" >
        <Preference
            android:key="pref_donate_key"
            android:summary="@string/pref_donate_summary"
            android:title="@string/pref_donate_title" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://me.alipay.com/dingyu211" />
        </Preference>
        <Preference
            android:summary="@string/pref_play_store_address_summary"
            android:title="@string/pref_play_store_address_title" >
        </Preference>
        <!--
        android:data="market://details?id=org.qii.weiciyuan"
        <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.mumayi.com/android-331970.html?1370522342" />
        -->

        <Preference
            android:key="pref_suggest_key"
            android:title="@string/pref_suggest_title" >
        </Preference>
        <Preference
            android:key="pref_recommend_key"
            android:title="@string/pref_recommend_title" >
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_storage_title" >
        <Preference
            android:key="pref_cache_path_key"
            android:title="@string/pref_cache_path_title" >
        </Preference>
        <Preference
            android:key="pref_saved_pic_path_key"
            android:title="@string/pref_saved_pic_path_title" >
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>